- Added support of parameter=>value arrays to
  xsl_xsltprocessor_set_parameter(). (Tony)
- Fixed extension initialization to respect dependancies between extensions.
  (Wez)
- Fixed a problem with SPL iterators aggregating the innner iterator. (Marcus)
- Fixed bug with $HTTP_RAW_POST_DATA not getting set. (Brian)
- Fixed bug in mysql::client_version(). (Georg)
- Fixed ZTS destruction. (Marcus)
- Fixed bug #32924 (file included with "auto_prepend_file" can be included
  with require_once() or include_once()). (Stas)
- Fixed bug #32833 (Invalid opcode). (Dmitry)
- Fixed bug #32491 (File upload error - unable to create a temporary file).
  (Uwe Schindler)
- Fixed bug #32429 (method_exists() always return TRUE if __call method
  exists). (Dmitry)
- Fixed bug #32427 (Interfaces are not allowed 'static' access modifier).
  (Dmitry)
- Fixed bug #32109 ($_POST is not populated in multithreaded environment).
  (Moriyoshi)
- Fixed bug #31478 (segfault with empty() / isset()). (Moriyoshi)
- Fixed bug #31033 (php:function(string, nodeset) with xsl:key crashes PHP).
  (Rob)
- Fixed bug #30578 (Output buffers flushed before calling __desctruct()
  functions). (Jani)
- Fixed bug #30407 (Strange behaviour of default arguments). (Dmitry)
- Fixed bug #29728 (Reflection API Feature: Default parameter value). (Marcus)
- Fixed bug #29522 (accessing properties without connection). (Georg)
- Fixed bug #29335 (fetch functions now use MYSQLI_BOTH as default). (Georg)
- Fixed bug #29311 (calling parent constructor in mysqli). (Georg)
- Fixed bug #29256 (SOAP HTTP Error when envelop size is more than 24345
  bytes).  (Dmitry, Wez)
- Fixed bug #29236 (memory error when wsdl-cache is enabled). (Dmitry)
- Fixed bug #29109 (SoapFault exception: [WSDL] Out of memory). (Dmitry)
- Fixed bug #29061 (soap extension segfaults). (Dmitry)
- Fixed bug #28985 (__getTypes() returning nothing on complex WSDL). (Dmitry)
- Fixed bug #28969 (Wrong data encoding of special characters). (Dmitry)